Add differentiated 23PzD to the mod name for modlist

--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -1,6 +1,6 @@
-name = "AWR"
+name = "AWR_PzDMod"
 prefix = "awr"
-author = "[79AD] S. Spartan"
+author = "[79AD] S. Spartan, [23PzD] Carlsen"
 template = "cba"
 mainprefix = "z"
 #include = ["./include"]
